force-app/main/default/objects/Job_Order__c/fields/Assigned_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>