force-app/main/default/objects/Job_Order__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <label>Bill Rate ($/hr)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>