force-app/main/default/objects/Job_Order__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>