force-app/main/default/objects/Job_Order__c/fields/Interviews_Scheduled_Count__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Scheduled_Count__c</fullName>
    <label>Interviews Scheduled Count</label>
    <summaryFilterItems>
        <field>Candidate_Submission__c.Status__c</field>
        <operation>equals</operation>
        <value>Interview Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Submission__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>