force-app/main/default/objects/Job_Order__c/fields/Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Submission_Date__c</fullName>
    <label>Last Submission Date</label>
    <summarizedField>Candidate_Submission__c.Submission_Date__c</summarizedField>
    <summaryForeignKey>Candidate_Submission__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>