force-app/main/default/objects/Job_Order__c/fields/Pay_Rate_Min__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Min__c</fullName>
    <label>Pay Rate Min</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>