force-app/main/default/objects/Job_Order__c/fields/Remaining_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Headcount__c</fullName>
    <formula>Headcount__c  -  Placements_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Headcount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>