force-app/main/default/objects/Job_Order__c/fields/Submissions_Count__c.field-meta.xml
<CustomField>
    <fullName>Submissions_Count__c</fullName>
    <label>Submissions Count</label>
    <summaryForeignKey>Candidate_Submission__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>