force-app/main/default/objects/Job_Order__c/fields/Target_Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Fill_Date__c</fullName>
    <defaultValue>ADDMONTHS(TODAY(), 1)</defaultValue>
    <label>Target Fill Date</label>
    <type>Date</type>
</CustomField>