force-app/main/default/objects/Job_Order__c/validationRules/Cannot_create_JO_for_inactive_client.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_JO_for_inactive_client</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISPICKVAL(Client__r.Status__c, &apos;Inactive&apos;), ISPICKVAL(Client__r.Status__c, &apos;Blacklisted&apos;) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Job orders cannot be created for Inactive or Blacklisted clients. Update the client status first.</errorMessage>
</ValidationRule>