force-app/main/default/objects/Job_Order__c/validationRules/Employment_Type_is_Required_on_JO.validationRule-meta.xml
<ValidationRule>
    <fullName>Employment_Type_is_Required_on_JO</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Employment_Type__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Employment_Type__c</errorDisplayField>
    <errorMessage>Employment Type is Required To Create Job Orders</errorMessage>
</ValidationRule>