force-app/main/default/objects/Job_Order__c/validationRules/Job_Title_is_Required_on_JO.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Title_is_Required_on_JO</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Job_Title__c )</errorConditionFormula>
    <errorDisplayField>Job_Title__c</errorDisplayField>
    <errorMessage>Job Title is required to create Job Orders</errorMessage>
</ValidationRule>