force-app/main/default/objects/Job_Order__c/validationRules/Pay_rate_range_must_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_rate_range_must_be_valid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Pay_Rate_Min__c)), NOT(ISBLANK(Pay_Rate_Max__c)), Pay_Rate_Min__c &gt;= Pay_Rate_Max__c )</errorConditionFormula>
    <errorDisplayField>Pay_Rate_Max__c</errorDisplayField>
    <errorMessage>Minimum pay rate must be less than maximum pay rate.</errorMessage>
</ValidationRule>