force-app/main/default/objects/Job_Order__c/validationRules/Status_is_required_on_JO.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_required_on_JO</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is required to create Job Orders</errorMessage>
</ValidationRule>